[JBIDE-12855] fixed lookup, replaced URL by URI
git-svn-id: http://svn.jboss.org/repos/jbosstools/branches/jbosstools-4.0.0.Beta1@44578 a97e2381-89e5-4abb-bab3-167db6db766c